Use sockjs 0.3.4. That's the version spring 4 supports

--- a/wampspring-demo-various/src/main/resources/static/map/index.html
+++ b/wampspring-demo-various/src/main/resources/static/map/index.html
@@ -17,7 +17,7 @@ body {
 	height: 100%
 }
 </style>
-<script src="../sockjs-1.0.0-beta.10.min.js"></script>
+<script src="../sockjs-0.3.4.min.js"></script>
 <script src="../autobahn-0.8.2.min.js"></script>
 <script src="../util.js"></script>
 <script
