--- a/wampspring-demo-simple/src/main/resources/static/index.html
+++ b/wampspring-demo-simple/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>wampspring simple demo</title>
-<script src="sockjs-1.0.0-beta.10.min.js"></script>
+<script src="sockjs-0.3.4.min.js"></script>
 <script src="autobahn-0.8.2.min.js"></script>
 
 <script>
