Add snake example

--- a/wampspring-demo-various/src/main/resources/static/index.html
+++ b/wampspring-demo-various/src/main/resources/static/index.html
@@ -50,18 +50,23 @@ body {
     <ul id="demolist">
 		<li>
 		  <strong>Smoothie Charts</strong>&nbsp;&nbsp;&nbsp;
-		  <a class="demolink" href="smoothie/index.html">SockJS</a>&nbsp;&nbsp;&nbsp;
-		  <a class="demolink" href="smoothie/index.html?websocket">Native WebSocket</a>
+		  <a href="smoothie/index.html">SockJS</a>&nbsp;&nbsp;&nbsp;
+		  <a href="smoothie/index.html?websocket">Native WebSocket</a>
 		  <p>Copy of the <a href="http://smoothiecharts.org/">Smoothie Charts</a> <a href="http://smoothiecharts.org/examples/server-load.html">Server Load Example</a>. 
 		  In this example the server generates the random data every second and sends it to the connected clients.</p>
 		</li>
 		<li>
           <strong>Google Maps</strong>&nbsp;&nbsp;&nbsp;
-		  <a class="demolink" href="map/index.html">SockJS</a>&nbsp;&nbsp;&nbsp;
-		  <a class="demolink" href="map/index.html?websocket">Native WebSocket</a>
+		  <a href="map/index.html">SockJS</a>&nbsp;&nbsp;&nbsp;
+		  <a href="map/index.html?websocket">Native WebSocket</a>
 		  <p>Server sends periodically coordinates to the connected clients that moves two car icons on a google maps.</p>
 		</li>		
-			
+		<li>
+	      <strong>Snake</strong>&nbsp;&nbsp;&nbsp;
+		  <a href="snake/index.html">SockJS</a>&nbsp;&nbsp;&nbsp;
+		  <a href="snake/index.html?websocket">Native WebSocket</a>
+		  <p>Port of the WebSocket snake demo included in the Tomcat (7 and 8) distribution.</p>
+		</li>
     </ul>
 
 <!-- 	<div class="container">
