--- a/wampspring-demo-various/src/main/resources/static/index.html
+++ b/wampspring-demo-various/src/main/resources/static/index.html
@@ -67,20 +67,15 @@ body {
 		  <a href="snake/index.html?websocket">Native WebSocket</a>
 		  <p>Port of the WebSocket snake demo included in the Tomcat (7 and 8) distribution.</p>
 		</li>
+		<li>
+		  <strong>Realtime Bandwidth Monitoring</strong>&nbsp;&nbsp;&nbsp;
+          <a href="bandwidth/index.html">SockJS</a>&nbsp;&nbsp;&nbsp;
+		  <a href="bandwidth/index.html?websocket">Native WebSocket</a>		  
+		  <p>Shows received and sent bytes of this server network interface. Port of the <a href="https://github.com/pesarkhobeee/Realtime-Bandwidth-Grapher">pesarkhobeee/Realtime-Bandwidth-Grapher</a> project.</p>
+		</li>		
     </ul>
 
-<!-- 	<div class="container">
-		<div class="span12">
-
-			<section id="demo-links">
-				<h3>Demos</h3>
-				<ul>
-				
-					<li>
-					  <strong><a class="demolink" href="smoothiedemo/index.html">Smoothie Charts</a></strong>
-					  <p>Copy of the <a href="http://smoothiecharts.org/">Smoothie Charts</a> <a href="http://smoothiecharts.org/examples/server-load.html">Server Load Example</a>. 
-					  But in this example the server generates the random data every second and sends it to the connected clients.</p>
-					</li>					
+<!-- 			
 				
 					<li>
 					  <strong><a class="demolink" href="chatdemo/index.html">Chat</a></strong>
@@ -100,10 +95,7 @@ body {
 					  <p>Twitter demo that uses the <a href="https://github.com/twitter/hbc">Streaming API from Twitter</a> and tracks these terms 
 					  "ExtJS", "#extjs", "#SenchaTouch", "Sencha", "#java", "java7", "java8", "#websocket", "#SpringFramework", "html5" and "javascript".</p>
 					</li>	
-					<li>
-					  <strong><a class="demolink" href="snakedemo/index.html">Snake</a></strong>
-					  <p>Port of the Websocket snake demo included in the Tomcat 7 distribution (webapps/examples folder).</p>
-					</li>
+
 					<li>
 					  <strong><a class="demolink" href="griddemo/index.html">Ext JS Grid</a></strong>
 					  <p>Demonstrates an Ext JS store and model with a WAMP proxy. Create, update and delete operations are broadcasted to all connected clients.</p>
@@ -129,10 +121,7 @@ body {
 					  <strong><a class="demolink" href="portfoliodemo/index.html">Portfolio</a></strong>
 					  <p>Copy of the traditional portfolio demo from <a href="https://github.com/rstoyanchev">Rossen Stoyanchev's</a> <a href="https://github.com/rstoyanchev/spring-websocket-portfolio">rstoyanchev/spring-websocket-portfolio</a> project</p>
 					</li>
-					<li>
-					  <strong><a class="demolink" href="bandwidthdemo/index.html">Realtime Bandwidth Monitoring</a></strong>
-					  <p>Shows received and sent bytes of this server network interface. Port of the <a href="https://github.com/pesarkhobeee/Realtime-Bandwidth-Grapher">pesarkhobeee/Realtime-Bandwidth-Grapher</a> project.</p>
-					</li>
+
 					<li>
 					  <strong><a class="demolink" href="drawboarddemo/index.html">Drawboard Example</a></strong>
 					  <p>Port of the drawboard example from Tomcat 8 RC5. Websocket only example.</p>
