--- a/wampspring-demo-various/src/main/resources/static/index.html
+++ b/wampspring-demo-various/src/main/resources/static/index.html
@@ -49,6 +49,18 @@ body {
     <h3>Demos</h3>
     <ul id="demolist">
 		<li>
+		  <strong>Ext JS 4 Grid</strong>&nbsp;&nbsp;&nbsp;
+		  <a href="grid/index.html">SockJS</a>&nbsp;&nbsp;&nbsp;
+		  <a href="grid/index.html?websocket">Native WebSocket</a>						  
+		  <p>Demonstrates an Ext JS store and model with a WAMP proxy. Create, update and delete operations are broadcasted to all connected clients.</p>
+		</li>    
+		<li>
+		  <strong>Chat</strong>&nbsp;&nbsp;&nbsp;
+		  <a href="chat/index.html">SockJS</a>&nbsp;&nbsp;&nbsp;
+		  <a href="chat/index.html?websocket">Native WebSocket</a>					  
+		  <p>This is the sample application from <a href="https://github.com/flowersinthesand/portal-java">portal-java</a>.</p>
+		</li>    
+		<li>
 		  <strong>Smoothie Charts</strong>&nbsp;&nbsp;&nbsp;
 		  <a href="smoothie/index.html">SockJS</a>&nbsp;&nbsp;&nbsp;
 		  <a href="smoothie/index.html?websocket">Native WebSocket</a>
@@ -77,10 +89,7 @@ body {
 
 <!-- 			
 				
-					<li>
-					  <strong><a class="demolink" href="chatdemo/index.html">Chat</a></strong>
-					  <p>This is the sample application from <a href="https://github.com/flowersinthesand/portal-java">portal-java</a>.</p>
-					</li>
+
 					
 					<li>
 					  <strong><a class="demolink" href="schdemo/index.html">Bryntum Ext Scheduler</a></strong> / <strong><a class="demolink" href="schdemo/index_touch.html">Bryntum Touch Scheduler</a></strong>
@@ -96,10 +105,7 @@ body {
 					  "ExtJS", "#extjs", "#SenchaTouch", "Sencha", "#java", "java7", "java8", "#websocket", "#SpringFramework", "html5" and "javascript".</p>
 					</li>	
 
-					<li>
-					  <strong><a class="demolink" href="griddemo/index.html">Ext JS Grid</a></strong>
-					  <p>Demonstrates an Ext JS store and model with a WAMP proxy. Create, update and delete operations are broadcasted to all connected clients.</p>
-					</li>
+
 					<li>
 					  <strong><a class="demolink" href="taildemo/index.html">Access Log Wargames Map</a></strong>
 					  <p>
