Use util.js in all demos

--- a/wampspring-demo-various/src/main/resources/static/grid/index.html
+++ b/wampspring-demo-various/src/main/resources/static/grid/index.html
@@ -6,6 +6,7 @@
 <script src="//demo.rasc.ch/resources/ext-4.2.2-gpl/ext-all.js"></script>
 <script src="../sockjs-0.3.4.min.js"></script>
 <script src="../autobahn-0.8.2.min.js"></script>
+<script src="../util.js"></script>
 <script src="Manager.js"></script>
 <script src="Proxy.js"></script>
 <script src="Store.js"></script>
