--- a/wampspring-demo-various/src/main/resources/static/scheduler/index.html
+++ b/wampspring-demo-various/src/main/resources/static/scheduler/index.html
@@ -6,8 +6,9 @@
     <script src="//demo.rasc.ch/resources/ext-4.2.2-gpl/examples/shared/options-toolbar.js"></script>
 	<link rel="stylesheet" href="//demo.rasc.ch/resources/resources/css/sch-all.css">
     <link href="css/style.css" rel="stylesheet" />
-    <script src="../sockjs-0.3.4.min.js"></script>
-    <script src="//demo.rasc.ch/resources/autobahn.min.js"></script>
+	<script src="../sockjs-0.3.4.min.js"></script>
+	<script src="../autobahn-0.8.2.min.js"></script>
+	<script src="../util.js"></script>
     <script src="//demo.rasc.ch/resources/sch-all.js"></script>
     <script src="app.js"></script>
     <title>Springframework 4/SockJS/AutobahnJS/ExtScheduler (Bryntum)</title>
