--- a/wampspring-demo-various/src/main/resources/static/scheduler/index_touch.html
+++ b/wampspring-demo-various/src/main/resources/static/scheduler/index_touch.html
@@ -8,7 +8,8 @@
     <script src="//extjs.cachefly.net/touch/sencha-touch-2.1.1/sencha-touch-all.js"></script>
     <script src="//demo.rasc.ch/resources/touch-scheduler-all.js"></script>
     <script src="../sockjs-0.3.4.min.js"></script>
-    <script src="//demo.rasc.ch/resources/autobahn.min.js"></script>
+    <script src="../autobahn-0.8.2.min.js"></script>
+    <script src="../util.js"></script>
     <script src="app.js"></script>
     <title>Springframework 4/SockJS/AutobahnJS/ExtScheduler (Bryntum)</title>
 </head>
