Add another websocket sample

--- a/wampspring-demo-various/src/main/resources/static/index.html
+++ b/wampspring-demo-various/src/main/resources/static/index.html
@@ -116,7 +116,15 @@ li p {
 		    Translates ip addresses from the Apache access log from this server to latitude/longitude with the help of <a href="http://dev.maxmind.com/geoip/geoip2/geolite2/">GeoCityIP</a> and
 		    visualizes them on a world map. This example is based on <a target="_blank" href="https://github.com/stagas/maptail">maptail</a> and <a target="_blank" href="https://github.com/mape">mape</a>'s <a target="_blank" href="https://github.com/mape/node-wargames">wargames</a>.			    
 		  </p>
-		</li>		
+		</li>
+		<li>
+		  <strong>hwsexp</strong>&nbsp;&nbsp;&nbsp;
+          <a href="hwsexp/index.html">SockJS</a>&nbsp;&nbsp;&nbsp;
+		  <a href="hwsexp/index.html?websocket">Native WebSocket</a>		  
+		  <p>
+		    Port of a Haskell websocket sample application with AngularJS and D3.js. <a target="_blank" href="https://github.com/eigengo/hwsexp">https://github.com/eigengo/hwsexp</a> 			    
+		  </p>
+		</li>
     </ul>
 
 </body>
