Add sample with gauges from https://github.com/ecomfe/echarts

--- a/wampspring-demo-various/src/main/resources/static/index.html
+++ b/wampspring-demo-various/src/main/resources/static/index.html
@@ -118,6 +118,14 @@ li p {
 		  </p>
 		</li>
 		<li>
+		  <strong>Dynamic Gauge</strong>&nbsp;&nbsp;&nbsp;
+          <a href="echarts/index.html">SockJS</a>&nbsp;&nbsp;&nbsp;
+		  <a href="echarts/index.html?websocket">Native WebSocket</a>		  
+		  <p>
+		    Gauges from the <a target="_blank" href="http://echarts.baidu.com/index-en.html">ECharts</a> library that are updated from the server.
+		  </p>
+		</li>		
+		<li>
 		  <strong>hwsexp</strong>&nbsp;&nbsp;&nbsp;
           <a href="hwsexp/index.html">SockJS</a>&nbsp;&nbsp;&nbsp;
 		  <a href="hwsexp/index.html?websocket">Native WebSocket</a>		  
