Add earthquake sample

--- a/wampspring-demo-various/src/main/resources/static/index.html
+++ b/wampspring-demo-various/src/main/resources/static/index.html
@@ -133,6 +133,14 @@ li p {
 		    Port of a Haskell websocket sample application with AngularJS and D3.js. <a target="_blank" href="https://github.com/eigengo/hwsexp">https://github.com/eigengo/hwsexp</a> 			    
 		  </p>
 		</li>
+		<li>
+		  <strong>Earthquake</strong>&nbsp;&nbsp;&nbsp;
+          <a href="earthquake/index.html">SockJS</a>&nbsp;&nbsp;&nbsp;
+		  <a href="earthquake/index.html?websocket">Native WebSocket</a>		  
+		  <p>
+		    Reading and displaying data from the <a target="_blank" href="http://earthquake.usgs.gov/">Earthquake Hazards Program</a>
+		  </p>
+		</li>
     </ul>
 
 </body>
