Move demos to a new server

--- a/wampspring-demo-various/src/main/resources/static/grid/index.html
+++ b/wampspring-demo-various/src/main/resources/static/grid/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="//demo.rasc.ch/resources/ext-4.2.2-gpl/resources/css/ext-all.css" />
-<script src="//demo.rasc.ch/resources/ext-4.2.2-gpl/ext-all.js"></script>
+<link rel="stylesheet" href="https://static.rasc.ch/ext-4.2.2-gpl/resources/css/ext-all.css" />
+<script src="https://static.rasc.ch/ext-4.2.2-gpl/ext-all.js"></script>
 <script src="../sockjs-0.3.4.min.js"></script>
 <script src="../autobahn-0.8.2.min.js"></script>
 <script src="../util.js"></script>
