--- a/wampspring-demo-various/src/main/resources/static/tail/index.html
+++ b/wampspring-demo-various/src/main/resources/static/tail/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="maptail.css">
-<script src="//demo.rasc.ch/resources/raphael-min.js"></script>
+<script src="https://static.rasc.ch/raphael-min.js"></script>
 <script src="../sockjs-0.3.4.min.js"></script>
 <script src="../autobahn-0.8.2.min.js"></script>
 <script src="../util.js"></script>
