--- a/wampspring-demo-various/src/main/resources/static/echarts/index.html
+++ b/wampspring-demo-various/src/main/resources/static/echarts/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>echarts</title>
-<script src="//demo.rasc.ch/resources/echarts-all.js"></script>
+<script src="https://static.rasc.ch/echarts-all.js"></script>
 <script src="../sockjs-0.3.4.min.js"></script>
 <script src="../autobahn-0.8.2.min.js"></script>
 <script src="../util.js"></script>
