--- a/wampspring-demo-various/src/main/resources/static/scheduler/index.html
+++ b/wampspring-demo-various/src/main/resources/static/scheduler/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <script src="//demo.rasc.ch/resources/ext-4.2.2-gpl/examples/shared/include-ext.js"></script>
-    <script src="//demo.rasc.ch/resources/ext-4.2.2-gpl/examples/shared/options-toolbar.js"></script>
-	<link rel="stylesheet" href="//demo.rasc.ch/resources/resources/css/sch-all.css">
+    <script src="https://static.rasc.ch/ext-4.2.2-gpl/examples/shared/include-ext.js"></script>
+    <script src="https://static.rasc.ch/ext-4.2.2-gpl/examples/shared/options-toolbar.js"></script>
+	<link rel="stylesheet" href="https://static.rasc.ch/resources/css/sch-all.css">
     <link href="css/style.css" rel="stylesheet" />
 	<script src="../sockjs-0.3.4.min.js"></script>
 	<script src="../autobahn-0.8.2.min.js"></script>
 	<script src="../util.js"></script>
-    <script src="//demo.rasc.ch/resources/sch-all.js"></script>
+    <script src="https://static.rasc.ch/sch-all.js"></script>
     <script src="app.js"></script>
     <title>Springframework 4/SockJS/AutobahnJS/ExtScheduler (Bryntum)</title>
 </head>
