--- a/wampspring-demo-various/src/main/resources/static/scheduler/index_touch.html
+++ b/wampspring-demo-various/src/main/resources/static/scheduler/index_touch.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="utf-8">
     <link href="//extjs.cachefly.net/touch/sencha-touch-2.1.1/resources/css/sencha-touch.css" rel="stylesheet" />
-    <link href="//demo.rasc.ch/resources/resources/css/touch-scheduler-all.css" rel="stylesheet" />
+    <link href="https://static.rasc.ch/resources/css/touch-scheduler-all.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
     <script src="//extjs.cachefly.net/touch/sencha-touch-2.1.1/sencha-touch-all.js"></script>
-    <script src="//demo.rasc.ch/resources/touch-scheduler-all.js"></script>
+    <script src="https://static.rasc.ch/touch-scheduler-all.js"></script>
     <script src="../sockjs-0.3.4.min.js"></script>
     <script src="../autobahn-0.8.2.min.js"></script>
     <script src="../util.js"></script>
